[gd_scene load_steps=3 format=3 uid="uid://bb2xsv1qpwei"]

[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="1_go7bp"]
[ext_resource type="Script" uid="uid://bp1bu8mlf6f3p" path="res://Scripts/UI/setting_panel.gd" id="2_clx0a"]

[node name="SettingPanel" type="PanelContainer"]
use_parent_material = true
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_go7bp")
script = ExtResource("2_clx0a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
text = "Full Screen"

[node name="FullScreenCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
use_parent_material = true
layout_mode = 2
text = "Sound"

[node name="SoundCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
use_parent_material = true
layout_mode = 2
text = "Screen Glitches"

[node name="GlitchesCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 10

[connection signal="toggled" from="VBoxContainer/HBoxContainer/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/SoundCheckBox" to="." method="_on_sound_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/GlitchesCheckBox" to="." method="_on_glitches_check_box_toggled"]
